--- a/info/index.html
+++ b/info/index.html
@@ -1,1 +1,9 @@
-<html>Tani and Surbhi are both pakal</html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<frameset rows="100%,0" border="0">
+<frame src="http://yourotherdomain.com" frameborder="0">
+<frame frameborder="0">
+</frameset>
+</html>
