--- a/info/index.html
+++ b/info/index.html
@@ -2,8 +2,9 @@
 <head>
 <title>Page Title</title>
 </head>
-<frameset rows="100%,0" border="0">
+<!--frameset rows="100%,0" border="0">
 <frame src="https://sample199-developer-edition.ap4.force.com/saksham/s/" frameborder="0">
 <frame frameborder="0">
-</frameset>
+</frameset-->
+  window.open("https://sample199-developer-edition.ap4.force.com/saksham","_top");
 </html>
