--- a/info/index.html
+++ b/info/index.html
@@ -3,7 +3,7 @@
 <title>Page Title</title>
 </head>
 <frameset rows="100%,0" border="0">
-<frame src="https://sample199-developer-edition.ap4.force.com/saksham/s/" frameborder="0">
+<frame src="https://sample199-developer-edition.ap4.force.com/saksham?_iframeDomain=https://ondigitalocean.app" frameborder="0">
 <frame frameborder="0">
 </frameset>
 </html>
